--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         .header { background: white; padding: 15px 25px; display: flex; justify-content: space-between; align-items: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
         .dashboard-grid { display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 20px; padding: 20px; flex: 1; overflow: hidden; }
         .column { background: white; border-top: 5px solid var(--bosch-blue); display: flex; flex-direction: column; overflow: hidden; border-radius: 4px; box-shadow: 0 4px 6px rgba(0,0,0,0.05); }
-        .col-header { padding: 15px; background: #f8f9fa; border-bottom: 1px solid #ddd; font-weight: bold; font-size: 1.2em; display: flex; justify-content: space-between; }
+        .col-header { padding: 15px; background: #f8f9fa; border-bottom: 1px solid #ddd; font-weight: bold; font-size: 1.2em; display: flex; justify-content: space-between; align-items: center; }
+        .col-header a { text-decoration: none; color: inherit; display: flex; align-items: center; gap: 8px; transition: 0.2s; }
+        .col-header a:hover { color: var(--bosch-red); }
         .machine-list { flex: 1; overflow-y: auto; padding: 10px; }
         .card { padding: 12px; border-bottom: 1px solid #eee; border-left: 8px solid #ccc; margin-bottom: 8px; background: #fff; }
         .card.warning { border-left-color: #ffa500; }
@@ -49,9 +51,27 @@
 </div>
 
 <div class="dashboard-grid" id="mainDashboard" style="display:none;">
-    <div class="column"><div class="col-header">Agie <span id="count-agie">0</span></div><div class="machine-list" id="list-agie"></div></div>
-    <div class="column" style="border-top-color: var(--bosch-green);"><div class="col-header">Unotron <span id="count-uno">0</span></div><div class="machine-list" id="list-uno"></div></div>
-    <div class="column" style="border-top-color: var(--bosch-light-blue);"><div class="col-header">HE <span id="count-he">0</span></div><div class="machine-list" id="list-he"></div></div>
+    <div class="column">
+        <div class="col-header">
+            <a href="https://norman8410.github.io/agie-wartung/" target="_blank">⚡ Agie ➔</a>
+            <span id="count-agie">0</span>
+        </div>
+        <div class="machine-list" id="list-agie"></div>
+    </div>
+    <div class="column" style="border-top-color: var(--bosch-green);">
+        <div class="col-header">
+            <a href="https://norman8410.github.io/unotron-wartung/" target="_blank">🧪 Unotron ➔</a>
+            <span id="count-uno">0</span>
+        </div>
+        <div class="machine-list" id="list-uno"></div>
+    </div>
+    <div class="column" style="border-top-color: var(--bosch-light-blue);">
+        <div class="col-header">
+            <a href="https://norman8410.github.io/HE-Wartung/" target="_blank">⚙️ HE ➔</a>
+            <span id="count-he">0</span>
+        </div>
+        <div class="machine-list" id="list-he"></div>
+    </div>
 </div>
 
 <div id="loginModal" class="modal">
