--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+</body>
+</html>
 <!DOCTYPE html>
 <html lang="de">
 <head>
@@ -17,8 +19,7 @@
         .dashboard-grid { display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 20px; padding: 20px; flex: 1; overflow: hidden; }
         .column { background: white; border-top: 5px solid var(--bosch-blue); display: flex; flex-direction: column; overflow: hidden; border-radius: 4px; box-shadow: 0 4px 6px rgba(0,0,0,0.05); }
         .col-header { padding: 15px; background: #f8f9fa; border-bottom: 1px solid #ddd; font-weight: bold; font-size: 1.2em; display: flex; justify-content: space-between; align-items: center; }
-        .col-header a { text-decoration: none; color: inherit; display: flex; align-items: center; gap: 8px; transition: 0.2s; }
-        .col-header a:hover { color: var(--bosch-red); }
+        .col-header a { text-decoration: none; color: inherit; display: flex; align-items: center; gap: 8px; }
         .machine-list { flex: 1; overflow-y: auto; padding: 10px; }
         .card { padding: 12px; border-bottom: 1px solid #eee; border-left: 8px solid #ccc; margin-bottom: 8px; background: #fff; }
         .card.warning { border-left-color: #ffa500; }
@@ -27,12 +28,14 @@
         .card-info { display: flex; justify-content: space-between; margin-bottom: 8px; }
         .m-name { font-weight: bold; font-size: 1.1em; }
         select { width: 100%; padding: 5px; border: 1px solid #ccc; border-radius: 2px; }
+        select:disabled { background: #eee; cursor: not-allowed; }
         .nav-btn { padding: 8px 15px; cursor: pointer; border: 1px solid #ccc; background: white; font-weight: bold; color: var(--bosch-blue); border-radius: 2px; }
         .btn-primary { background: var(--bosch-blue); color: white; border: none; }
         .modal { position: fixed; inset: 0; background: rgba(0,0,0,0.7); display: none; justify-content: center; align-items: center; z-index: 4000; }
         .modal-box { background: white; padding: 30px; border-top: 8px solid var(--bosch-red); width: 400px; text-align: center; }
-        input { width: 90%; padding: 10px; margin: 10px 0; }
+        input { width: 90%; padding: 10px; margin: 5px 0; border: 1px solid #ccc; }
         textarea { width: 100%; height: 150px; margin: 10px 0; }
+        .status-badge { font-size: 12px; padding: 2px 8px; border-radius: 10px; background: #eee; }
         @keyframes pulse { 0% { background: #fff; } 50% { background: #fff0f0; } 100% { background: #fff; } }
     </style>
 </head>
@@ -43,44 +46,32 @@
     <div>
         <span style="color:var(--bosch-red);font-weight:900;font-size:24px;">BOSCH</span> 
         <span style="font-weight:bold;color:#555;margin-left:10px;">Zentral-Dashboard</span>
+        <span id="loginStatus" class="status-badge">Gast-Modus (Nur Lesen)</span>
     </div>
     <div>
-        <button id="authBtn" class="nav-btn" onclick="openLoginModal()">🔑 Login</button>
+        <button id="authBtn" class="nav-btn" onclick="openLoginModal()">🔑 Login / Registrierung</button>
         <button class="nav-btn" onclick="openEinstellerModal()">⚙️ Einsteller bearbeiten</button>
     </div>
 </div>
 
-<div class="dashboard-grid" id="mainDashboard" style="display:none;">
-    <div class="column">
-        <div class="col-header">
-            <a href="https://norman8410.github.io/agie-wartung/" target="_blank">⚡ Agie ➔</a>
-            <span id="count-agie">0</span>
-        </div>
-        <div class="machine-list" id="list-agie"></div>
-    </div>
-    <div class="column" style="border-top-color: var(--bosch-green);">
-        <div class="col-header">
-            <a href="https://norman8410.github.io/unotron-wartung/" target="_blank">🧪 Unotron ➔</a>
-            <span id="count-uno">0</span>
-        </div>
-        <div class="machine-list" id="list-uno"></div>
-    </div>
-    <div class="column" style="border-top-color: var(--bosch-light-blue);">
-        <div class="col-header">
-            <a href="https://norman8410.github.io/HE-Wartung/" target="_blank">⚙️ HE ➔</a>
-            <span id="count-he">0</span>
-        </div>
-        <div class="machine-list" id="list-he"></div>
-    </div>
+<div class="dashboard-grid" id="mainDashboard">
+    <div class="column"><div class="col-header"><a href="https://norman8410.github.io/agie-wartung/" target="_blank">⚡ Agie</a><span id="count-agie">0</span></div><div class="machine-list" id="list-agie"></div></div>
+    <div class="column" style="border-top-color: var(--bosch-green);"><div class="col-header"><a href="https://norman8410.github.io/unotron-wartung/" target="_blank">🧪 Unotron</a><span id="count-uno">0</span></div><div class="machine-list" id="list-uno"></div></div>
+    <div class="column" style="border-top-color: var(--bosch-light-blue);"><div class="col-header"><a href="https://norman8410.github.io/HE-Wartung/" target="_blank">⚙️ HE</a><span id="count-he">0</span></div><div class="machine-list" id="list-he"></div></div>
 </div>
 
 <div id="loginModal" class="modal">
     <div class="modal-box">
-        <h3>Anmeldung</h3>
+        <h3 id="modalTitle">Anmeldung</h3>
         <input type="email" id="loginEmail" placeholder="E-Mail">
         <input type="password" id="loginPass" placeholder="Passwort">
-        <button class="nav-btn btn-primary" style="width:100%" onclick="login()">Einloggen</button>
-        <p onclick="closeModal('loginModal')" style="cursor:pointer; font-size:12px; margin-top:10px;">Abbrechen</p>
+        <div id="regFields" style="display:none;">
+            <input type="password" id="loginPassConfirm" placeholder="Passwort wiederholen">
+        </div>
+        <button id="primaryBtn" class="nav-btn btn-primary" style="width:100%; margin-top:10px;" onclick="handleAuth()">Einloggen</button>
+        <hr>
+        <p id="toggleText" style="font-size:13px; cursor:pointer; color:var(--bosch-blue);" onclick="toggleAuthMode()">Noch kein Konto? Hier registrieren</p>
+        <button class="nav-btn" style="width:100%" onclick="closeModal('loginModal')">Abbrechen</button>
     </div>
 </div>
 
@@ -100,16 +91,23 @@
 
     const UNO_STEPS = [{total:2000},{total:4000},{total:10000},{total:14000},{total:18000},{total:26000},{total:28000},{total:30000},{total:34000},{total:42000},{total:50000},{total:56000},{total:58000},{total:66000},{total:74000},{total:82000},{total:90000},{total:98000},{total:104000}];
     let state = { agie: {}, uno: {}, he: {}, config: {}, assignments: {} };
+    let isRegistration = false;
+
+    // Startet sofort, auch ohne Login
+    startListening();
 
     auth.onAuthStateChanged(user => {
+        const status = document.getElementById('loginStatus');
         if (user) {
-            document.getElementById('authBtn').innerText = "🔓 Logout";
-            document.getElementById('mainDashboard').style.display = 'grid';
-            startListening();
+            document.getElementById('authBtn').innerText = "🔓 Logout (" + user.email.split('@')[0] + ")";
+            status.innerText = "Angemeldet - Auswahl aktiv";
+            status.style.background = "#d4edda";
         } else {
-            document.getElementById('authBtn').innerText = "🔑 Login";
-            document.getElementById('mainDashboard').style.display = 'none';
+            document.getElementById('authBtn').innerText = "🔑 Login / Registrierung";
+            status.innerText = "Gast-Modus (Nur Lesen)";
+            status.style.background = "#eee";
         }
+        updateUI(); 
     });
 
     function startListening() {
@@ -120,63 +118,68 @@
         db.ref('maintenanceStateHE').on('value', s => { state.he = s.val() || {}; updateUI(); });
     }
 
-    async function login() {
+    function toggleAuthMode() {
+        isRegistration = !isRegistration;
+        document.getElementById('modalTitle').innerText = isRegistration ? "Registrierung" : "Anmeldung";
+        document.getElementById('primaryBtn').innerText = isRegistration ? "Konto erstellen" : "Einloggen";
+        document.getElementById('regFields').style.display = isRegistration ? "block" : "none";
+        document.getElementById('toggleText').innerText = isRegistration ? "Bereits ein Konto? Zum Login" : "Noch kein Konto? Hier registrieren";
+    }
+
+    async function handleAuth() {
+        const email = document.getElementById('loginEmail').value;
+        const pass = document.getElementById('loginPass').value;
         try {
-            await auth.signInWithEmailAndPassword(document.getElementById('loginEmail').value, document.getElementById('loginPass').value);
+            if(isRegistration) {
+                if(pass !== document.getElementById('loginPassConfirm').value) return alert("Passwörter ungleich!");
+                await auth.createUserWithEmailAndPassword(email, pass);
+            } else {
+                await auth.signInWithEmailAndPassword(email, pass);
+            }
             closeModal('loginModal');
-        } catch(e) { alert("Login fehlgeschlagen: " + e.message); }
+        } catch(e) { alert("Fehler: " + e.message); }
+    }
+
+    async function safeAssign(key, value) {
+        if(!auth.currentUser) return alert("Bitte erst einloggen!");
+        if(prompt("Admin Passwort zur Bestätigung:") !== state.config.AdminPW) return alert("Falsches Passwort! Änderung nicht gespeichert.");
+        await db.ref(`dashboardAssignments/${key}`).set(value);
     }
 
     function updateUI() {
-        renderAgie();
-        renderUno();
-        renderHE();
+        renderSection('list-agie', 'count-agie', state.agie, 'A', 2000);
+        renderSection('list-uno', 'count-uno', state.uno, 'U', 2000);
+        renderSection('list-he', 'count-he', state.he, 'H', 15000);
     }
 
-    function renderAgie() {
-        if(!state.agie.cloudRawData) return;
-        const data = state.agie.cloudRawData.map(item => {
-            const id = item.StationNo;
-            const ist = (parseInt(item.Parts) || 0) - (state.agie.agieOffsets?.[id] || 0);
-            const cycles = state.agie.extraCycles?.[id] || 0;
-            const rest = (16000 + (cycles * 16000)) - ist;
-            return { id: 'A'+id, rest, limit: 2000, key: 'A'+id };
-        }).filter(m => m.rest < 2000).sort((a,b) => a.rest - b.rest);
-        drawList('list-agie', 'count-agie', data);
-    }
+    function renderSection(listId, countId, raw, prefix, warnLimit) {
+        if(!raw.cloudRawData) return;
+        let data = raw.cloudRawData.map(item => {
+            let id = item.StationNo || item.STATIONNO;
+            let ist = 0, target = 0;
+            if(prefix === 'A') {
+                ist = (parseInt(item.Parts) || 0) - (raw.agieOffsets?.[id] || 0);
+                target = (16000 + ((raw.extraCycles?.[id] || 0) * 16000));
+            } else if(prefix === 'U') {
+                ist = parseInt(item["COUNT(*)"] || 0);
+                let cIdx = raw.extraCycles?.[id] || 0;
+                target = UNO_STEPS[cIdx]?.total || (104000 + ((cIdx-18)*5000));
+            } else {
+                ist = (parseInt(item.Parts) || 0) + (raw.manualOffsets?.[id] || 0);
+                target = (156000 * ((raw.extraCycles?.[id] || 0) + 1));
+            }
+            return { id: prefix+id, rest: target - ist, key: prefix+id };
+        }).filter(m => m.rest < warnLimit).sort((a,b) => a.rest - b.rest);
 
-    function renderUno() {
-        if(!state.uno.cloudRawData) return;
-        const data = state.uno.cloudRawData.map(item => {
-            const id = item.STATIONNO;
-            const ist = parseInt(item["COUNT(*)"] || 0);
-            const cIdx = state.uno.extraCycles?.[id] || 0;
-            const target = UNO_STEPS[cIdx]?.total || (104000 + ((cIdx-18)*5000));
-            return { id: 'UNO-'+id, rest: target - ist, limit: 2000, key: 'U'+id };
-        }).filter(m => m.rest < 2000).sort((a,b) => a.rest - b.rest);
-        drawList('list-uno', 'count-uno', data);
-    }
-
-    function renderHE() {
-        if(!state.he.cloudRawData) return;
-        const data = state.he.cloudRawData.map(item => {
-            const id = item.StationNo;
-            const ist = (parseInt(item.Parts) || 0) + (state.he.manualOffsets?.[id] || 0);
-            const cycles = state.he.extraCycles?.[id] || 0;
-            const rest = (156000 * (cycles + 1)) - ist;
-            return { id: 'HE'+id, rest, limit: 15000, key: 'H'+id };
-        }).filter(m => m.rest < 15000).sort((a,b) => a.rest - b.rest);
-        drawList('list-he', 'count-he', data);
-    }
-
-    function drawList(elId, countId, data) {
         document.getElementById(countId).innerText = data.length;
         const einsteller = state.config.einstellerListe || [];
-        document.getElementById(elId).innerHTML = data.map(m => `
+        const isLoggedIn = auth.currentUser !== null;
+
+        document.getElementById(listId).innerHTML = data.map(m => `
             <div class="card ${m.rest <= 0 ? 'overdue' : (m.rest < 500 ? 'critical' : 'warning')}">
-                <div class="card-info"><span class="m-name">${m.id}</span><b>${m.rest.toLocaleString()}</b></div>
-                <select onchange="db.ref('dashboardAssignments/${m.key}').set(this.value)">
-                    <option value="">-- Einsteller --</option>
+                <div class="card-info"><span>${m.id}</span><b>${m.rest.toLocaleString()}</b></div>
+                <select ${!isLoggedIn ? 'disabled' : ''} onchange="safeAssign('${m.key}', this.value)">
+                    <option value="">${isLoggedIn ? '-- Einsteller wählen --' : '🔒 Login zum Wählen'}</option>
                     ${einsteller.map(e => `<option value="${e}" ${state.assignments[m.key] === e ? 'selected' : ''}>${e}</option>`).join('')}
                 </select>
             </div>`).join('');
@@ -190,8 +193,7 @@
     }
     function closeModal(id) { document.getElementById(id).style.display = 'none'; }
     function saveEinsteller() {
-        const list = document.getElementById('einstellerTextarea').value.split('\n').map(n => n.trim()).filter(n => n);
-        db.ref('config/einstellerListe').set(list);
+        db.ref('config/einstellerListe').set(document.getElementById('einstellerTextarea').value.split('\n').filter(n => n.trim()));
         closeModal('einstellerModal');
     }
 </script>
