--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-</body>
-</html>
 <!DOCTYPE html>
 <html lang="de">
 <head>
@@ -19,23 +17,19 @@
         .dashboard-grid { display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 20px; padding: 20px; flex: 1; overflow: hidden; }
         .column { background: white; border-top: 5px solid var(--bosch-blue); display: flex; flex-direction: column; overflow: hidden; border-radius: 4px; box-shadow: 0 4px 6px rgba(0,0,0,0.05); }
         .col-header { padding: 15px; background: #f8f9fa; border-bottom: 1px solid #ddd; font-weight: bold; font-size: 1.2em; display: flex; justify-content: space-between; align-items: center; }
-        .col-header a { text-decoration: none; color: inherit; display: flex; align-items: center; gap: 8px; }
+        .col-header a { text-decoration: none; color: inherit; display: flex; align-items: center; gap: 8px; font-size: 0.9em; }
         .machine-list { flex: 1; overflow-y: auto; padding: 10px; }
         .card { padding: 12px; border-bottom: 1px solid #eee; border-left: 8px solid #ccc; margin-bottom: 8px; background: #fff; }
         .card.warning { border-left-color: #ffa500; }
         .card.critical { border-left-color: var(--bosch-red); animation: pulse 2s infinite; }
         .card.overdue { border-left-color: var(--bosch-dark-red); animation: pulse 1s infinite; }
         .card-info { display: flex; justify-content: space-between; margin-bottom: 8px; }
-        .m-name { font-weight: bold; font-size: 1.1em; }
         select { width: 100%; padding: 5px; border: 1px solid #ccc; border-radius: 2px; }
-        select:disabled { background: #eee; cursor: not-allowed; }
         .nav-btn { padding: 8px 15px; cursor: pointer; border: 1px solid #ccc; background: white; font-weight: bold; color: var(--bosch-blue); border-radius: 2px; }
         .btn-primary { background: var(--bosch-blue); color: white; border: none; }
         .modal { position: fixed; inset: 0; background: rgba(0,0,0,0.7); display: none; justify-content: center; align-items: center; z-index: 4000; }
         .modal-box { background: white; padding: 30px; border-top: 8px solid var(--bosch-red); width: 400px; text-align: center; }
         input { width: 90%; padding: 10px; margin: 5px 0; border: 1px solid #ccc; }
-        textarea { width: 100%; height: 150px; margin: 10px 0; }
-        .status-badge { font-size: 12px; padding: 2px 8px; border-radius: 10px; background: #eee; }
         @keyframes pulse { 0% { background: #fff; } 50% { background: #fff0f0; } 100% { background: #fff; } }
     </style>
 </head>
@@ -45,42 +39,33 @@
 <div class="header">
     <div>
         <span style="color:var(--bosch-red);font-weight:900;font-size:24px;">BOSCH</span> 
-        <span style="font-weight:bold;color:#555;margin-left:10px;">Zentral-Dashboard</span>
-        <span id="loginStatus" class="status-badge">Gast-Modus (Nur Lesen)</span>
+        <span style="font-weight:bold;color:#555;margin-left:10px;">Wartungs-Dashboard</span>
     </div>
     <div>
-        <button id="authBtn" class="nav-btn" onclick="openLoginModal()">🔑 Login / Registrierung</button>
-        <button class="nav-btn" onclick="openEinstellerModal()">⚙️ Einsteller bearbeiten</button>
+        <button id="authBtn" class="nav-btn" onclick="openLoginModal()">🔑 Login</button>
+        <button class="nav-btn" onclick="openAdminModal()">⚙️ Einsteller</button>
     </div>
 </div>
 
-<div class="dashboard-grid" id="mainDashboard">
-    <div class="column"><div class="col-header"><a href="https://norman8410.github.io/agie-wartung/" target="_blank">⚡ Agie</a><span id="count-agie">0</span></div><div class="machine-list" id="list-agie"></div></div>
-    <div class="column" style="border-top-color: var(--bosch-green);"><div class="col-header"><a href="https://norman8410.github.io/unotron-wartung/" target="_blank">🧪 Unotron</a><span id="count-uno">0</span></div><div class="machine-list" id="list-uno"></div></div>
-    <div class="column" style="border-top-color: var(--bosch-light-blue);"><div class="col-header"><a href="https://norman8410.github.io/HE-Wartung/" target="_blank">⚙️ HE</a><span id="count-he">0</span></div><div class="machine-list" id="list-he"></div></div>
+<div class="dashboard-grid">
+    <div class="column"><div class="col-header"><a href="https://norman8410.github.io/agie-wartung/" target="_blank">⚡ Agie ➔</a> <span id="count-agie">0</span></div><div class="machine-list" id="list-agie"></div></div>
+    <div class="column" style="border-top-color: var(--bosch-green);"><div class="col-header"><a href="https://norman8410.github.io/unotron-wartung/" target="_blank">🧪 Unotron ➔</a> <span id="count-uno">0</span></div><div class="machine-list" id="list-uno"></div></div>
+    <div class="column" style="border-top-color: var(--bosch-light-blue);"><div class="col-header"><a href="https://norman8410.github.io/HE-Wartung/" target="_blank">⚙️ HE ➔</a> <span id="count-he">0</span></div><div class="machine-list" id="list-he"></div></div>
 </div>
 
 <div id="loginModal" class="modal">
     <div class="modal-box">
-        <h3 id="modalTitle">Anmeldung</h3>
-        <input type="email" id="loginEmail" placeholder="E-Mail">
-        <input type="password" id="loginPass" placeholder="Passwort">
-        <div id="regFields" style="display:none;">
-            <input type="password" id="loginPassConfirm" placeholder="Passwort wiederholen">
+        <h3 id="mTitle">Login</h3>
+        <input type="email" id="mEmail" placeholder="E-Mail">
+        <input type="password" id="mPass" placeholder="Passwort">
+        <div id="regExtra" style="display:none;">
+            <input type="password" id="mPassConfirm" placeholder="Wiederholen">
+            <input type="text" id="mInvite" placeholder="Einladungscode">
+            <p style="font-size:11px;color:#666;">Code erhalten Sie von TL, FK oder Admin (Norman Schultheis).</p>
         </div>
-        <button id="primaryBtn" class="nav-btn btn-primary" style="width:100%; margin-top:10px;" onclick="handleAuth()">Einloggen</button>
-        <hr>
-        <p id="toggleText" style="font-size:13px; cursor:pointer; color:var(--bosch-blue);" onclick="toggleAuthMode()">Noch kein Konto? Hier registrieren</p>
-        <button class="nav-btn" style="width:100%" onclick="closeModal('loginModal')">Abbrechen</button>
-    </div>
-</div>
-
-<div id="einstellerModal" class="modal">
-    <div class="modal-box">
-        <h3>Einsteller Liste</h3>
-        <textarea id="einstellerTextarea"></textarea>
-        <button class="nav-btn btn-primary" onclick="saveEinsteller()">Speichern</button>
-        <button class="nav-btn" onclick="closeModal('einstellerModal')">Schließen</button>
+        <button class="nav-btn btn-primary" style="width:100%;margin-top:10px;" onclick="handleAuthAction()">Bestätigen</button>
+        <p id="toggleT" style="cursor:pointer;color:var(--bosch-blue);font-size:12px;" onclick="toggleM()">Konto erstellen?</p>
+        <button class="nav-btn" style="width:100%" onclick="closeModals()">Abbrechen</button>
     </div>
 </div>
 
@@ -88,113 +73,82 @@
     const firebaseConfig = { apiKey: "AIzaSyD6xGCtU-felOyO_BRsFnVlB4yhC46FgYg", authDomain: "bosch-agie-wartung.firebaseapp.com", databaseURL: "https://bosch-agie-wartung-default-rtdb.europe-west1.firebasedatabase.app", projectId: "bosch-agie-wartung", storageBucket: "bosch-agie-wartung.firebasestorage.app", messagingSenderId: "211606405555", appId: "1:211606405555:web:cc2475ca47804086a3cbc6" };
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database(), auth = firebase.auth();
-
     const UNO_STEPS = [{total:2000},{total:4000},{total:10000},{total:14000},{total:18000},{total:26000},{total:28000},{total:30000},{total:34000},{total:42000},{total:50000},{total:56000},{total:58000},{total:66000},{total:74000},{total:82000},{total:90000},{total:98000},{total:104000}];
-    let state = { agie: {}, uno: {}, he: {}, config: {}, assignments: {} };
-    let isRegistration = false;
+    
+    let state = { config:{}, assignments:{}, agie:{}, uno:{}, he:{} };
+    let isReg = false;
 
-    // Startet sofort, auch ohne Login
-    startListening();
+    // Dauerhafte Überwachung starten
+    db.ref('config').on('value', s => { state.config = s.val() || {}; updateUI(); });
+    db.ref('dashboardAssignments').on('value', s => { state.assignments = s.val() || {}; updateUI(); });
+    db.ref('maintenanceState').on('value', s => { state.agie = s.val() || {}; updateUI(); });
+    db.ref('maintenanceStateUnotron').on('value', s => { state.uno = s.val() || {}; updateUI(); });
+    db.ref('maintenanceStateHE').on('value', s => { state.he = s.val() || {}; updateUI(); });
 
     auth.onAuthStateChanged(user => {
-        const status = document.getElementById('loginStatus');
-        if (user) {
-            document.getElementById('authBtn').innerText = "🔓 Logout (" + user.email.split('@')[0] + ")";
-            status.innerText = "Angemeldet - Auswahl aktiv";
-            status.style.background = "#d4edda";
-        } else {
-            document.getElementById('authBtn').innerText = "🔑 Login / Registrierung";
-            status.innerText = "Gast-Modus (Nur Lesen)";
-            status.style.background = "#eee";
-        }
-        updateUI(); 
+        document.getElementById('authBtn').innerText = user ? "🔓 Logout" : "🔑 Login";
+        updateUI();
     });
 
-    function startListening() {
-        db.ref('config').on('value', s => { state.config = s.val() || {}; updateUI(); });
-        db.ref('dashboardAssignments').on('value', s => { state.assignments = s.val() || {}; updateUI(); });
-        db.ref('maintenanceState').on('value', s => { state.agie = s.val() || {}; updateUI(); });
-        db.ref('maintenanceStateUnotron').on('value', s => { state.uno = s.val() || {}; updateUI(); });
-        db.ref('maintenanceStateHE').on('value', s => { state.he = s.val() || {}; updateUI(); });
-    }
-
-    function toggleAuthMode() {
-        isRegistration = !isRegistration;
-        document.getElementById('modalTitle').innerText = isRegistration ? "Registrierung" : "Anmeldung";
-        document.getElementById('primaryBtn').innerText = isRegistration ? "Konto erstellen" : "Einloggen";
-        document.getElementById('regFields').style.display = isRegistration ? "block" : "none";
-        document.getElementById('toggleText').innerText = isRegistration ? "Bereits ein Konto? Zum Login" : "Noch kein Konto? Hier registrieren";
-    }
-
-    async function handleAuth() {
-        const email = document.getElementById('loginEmail').value;
-        const pass = document.getElementById('loginPass').value;
+    async function handleAuthAction() {
+        const email = document.getElementById('mEmail').value, pass = document.getElementById('mPass').value;
         try {
-            if(isRegistration) {
-                if(pass !== document.getElementById('loginPassConfirm').value) return alert("Passwörter ungleich!");
+            if(isReg) {
+                if(document.getElementById('mInvite').value !== state.config.inviteCode) return alert("Falscher Einladungscode!");
                 await auth.createUserWithEmailAndPassword(email, pass);
             } else {
                 await auth.signInWithEmailAndPassword(email, pass);
             }
-            closeModal('loginModal');
-        } catch(e) { alert("Fehler: " + e.message); }
+            closeModals();
+        } catch(e) { alert(e.message); }
     }
 
-    async function safeAssign(key, value) {
+    async function safeSave(key, val) {
         if(!auth.currentUser) return alert("Bitte erst einloggen!");
-        if(prompt("Admin Passwort zur Bestätigung:") !== state.config.AdminPW) return alert("Falsches Passwort! Änderung nicht gespeichert.");
-        await db.ref(`dashboardAssignments/${key}`).set(value);
+        if(prompt("Admin Passwort zur Bestätigung:") !== state.config.AdminPW) {
+            alert("Code falsch!");
+            updateUI(); // Reset
+            return;
+        }
+        await db.ref(`dashboardAssignments/${key}`).set(val);
     }
 
     function updateUI() {
-        renderSection('list-agie', 'count-agie', state.agie, 'A', 2000);
-        renderSection('list-uno', 'count-uno', state.uno, 'U', 2000);
-        renderSection('list-he', 'count-he', state.he, 'H', 15000);
+        renderCol('list-agie', 'count-agie', state.agie, 'A', 2000, 500);
+        renderCol('list-uno', 'count-uno', state.uno, 'U', 666, 166); // 1/3 Werte
+        renderCol('list-he', 'count-he', state.he, 'H', 15000, 5000);
     }
 
-    function renderSection(listId, countId, raw, prefix, warnLimit) {
+    function renderCol(id, cId, raw, pre, warn, crit) {
         if(!raw.cloudRawData) return;
-        let data = raw.cloudRawData.map(item => {
-            let id = item.StationNo || item.STATIONNO;
-            let ist = 0, target = 0;
-            if(prefix === 'A') {
-                ist = (parseInt(item.Parts) || 0) - (raw.agieOffsets?.[id] || 0);
-                target = (16000 + ((raw.extraCycles?.[id] || 0) * 16000));
-            } else if(prefix === 'U') {
-                ist = parseInt(item["COUNT(*)"] || 0);
-                let cIdx = raw.extraCycles?.[id] || 0;
-                target = UNO_STEPS[cIdx]?.total || (104000 + ((cIdx-18)*5000));
-            } else {
-                ist = (parseInt(item.Parts) || 0) + (raw.manualOffsets?.[id] || 0);
-                target = (156000 * ((raw.extraCycles?.[id] || 0) + 1));
-            }
-            return { id: prefix+id, rest: target - ist, key: prefix+id };
-        }).filter(m => m.rest < warnLimit).sort((a,b) => a.rest - b.rest);
+        const data = raw.cloudRawData.map(item => {
+            const sId = item.StationNo || item.STATIONNO;
+            let ist, target;
+            if(pre==='A') { ist=(item.Parts||0)-(raw.agieOffsets?.[sId]||0); target=16000+((raw.extraCycles?.[sId]||0)*16000); }
+            else if(pre==='U') { ist=item["COUNT(*)"]||0; let idx=raw.extraCycles?.[sId]||0; target=UNO_STEPS[idx]?.total || (104000+((idx-18)*5000)); }
+            else { ist=(item.Parts||0)+(raw.manualOffsets?.[sId]||0); target=156000*((raw.extraCycles?.[sId]||0)+1); }
+            return { id:pre+sId, rest: target-ist, key:pre+sId };
+        }).filter(m => m.rest < warn).sort((a,b) => a.rest - b.rest);
 
-        document.getElementById(countId).innerText = data.length;
-        const einsteller = state.config.einstellerListe || [];
-        const isLoggedIn = auth.currentUser !== null;
-
-        document.getElementById(listId).innerHTML = data.map(m => `
-            <div class="card ${m.rest <= 0 ? 'overdue' : (m.rest < 500 ? 'critical' : 'warning')}">
+        document.getElementById(cId).innerText = data.length;
+        document.getElementById(id).innerHTML = data.map(m => `
+            <div class="card ${m.rest<=0?'overdue':(m.rest<crit?'critical':'warning')}">
                 <div class="card-info"><span>${m.id}</span><b>${m.rest.toLocaleString()}</b></div>
-                <select ${!isLoggedIn ? 'disabled' : ''} onchange="safeAssign('${m.key}', this.value)">
-                    <option value="">${isLoggedIn ? '-- Einsteller wählen --' : '🔒 Login zum Wählen'}</option>
-                    ${einsteller.map(e => `<option value="${e}" ${state.assignments[m.key] === e ? 'selected' : ''}>${e}</option>`).join('')}
+                <select ${!auth.currentUser?'disabled':''} onchange="safeSave('${m.key}', this.value)">
+                    <option value="">-- Einsteller --</option>
+                    ${(state.config.einstellerListe||[]).map(e => `<option value="${e}" ${state.assignments[m.key]===e?'selected':''}>${e}</option>`).join('')}
                 </select>
             </div>`).join('');
     }
 
     function openLoginModal() { if(auth.currentUser) auth.signOut(); else document.getElementById('loginModal').style.display='flex'; }
-    function openEinstellerModal() {
-        if(prompt("Admin Passwort:") !== state.config.AdminPW) return alert("Falsch!");
-        document.getElementById('einstellerTextarea').value = (state.config.einstellerListe || []).join('\n');
-        document.getElementById('einstellerModal').style.display = 'flex';
-    }
-    function closeModal(id) { document.getElementById(id).style.display = 'none'; }
-    function saveEinsteller() {
-        db.ref('config/einstellerListe').set(document.getElementById('einstellerTextarea').value.split('\n').filter(n => n.trim()));
-        closeModal('einstellerModal');
+    function closeModals() { document.getElementById('loginModal').style.display='none'; }
+    function toggleM() { isReg=!isReg; document.getElementById('regExtra').style.display=isReg?'block':'none'; }
+    function openAdminModal() {
+        if(prompt("Admin PW:") === state.config.AdminPW) {
+            const nl = prompt("Einsteller (Komma getrennt):", (state.config.einstellerListe||[]).join(','));
+            if(nl) db.ref('config/einstellerListe').set(nl.split(',').map(s=>s.trim()));
+        }
     }
 </script>
 </body>
