--- a/unotron.html
+++ b/unotron.html
@@ -11,38 +11,31 @@
     <style>
         :root { --bosch-red: #d50000; --bosch-blue: #003a6c; --bosch-green: #008a4f; --bosch-gray: #eff1f2; }
         body { font-family: 'Segoe UI', sans-serif; background: var(--bosch-gray); margin: 0; padding: 0; display: flex; flex-direction: column; height: 100vh; overflow: hidden; }
-        header { background: white; padding: 10px 20px; display: flex; justify-content: space-between; align-items: center; box-shadow: 0 2px 5px rgba(0,0,0,0.1); z-index: 10; }
+        header { background: white; padding: 10px 20px; display: flex; justify-content: space-between; align-items: center; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
         .bosch-logo { color: var(--bosch-red); font-weight: 900; font-size: 24px; }
         .main-container { display: flex; flex: 1; overflow: hidden; }
-        .sidebar { width: 320px; background: white; border-right: 1px solid #ddd; display: flex; flex-direction: column; }
-        .machine-list { flex: 1; overflow-y: auto; padding: 10px; }
+        .sidebar { width: 320px; background: white; border-right: 1px solid #ddd; overflow-y: auto; padding: 10px; }
         .card { background: white; border: 1px solid #eee; border-left: 6px solid #ccc; margin-bottom: 10px; padding: 12px; border-radius: 4px; }
         .content { flex: 1; padding: 20px; }
-        .nav-btn { padding: 6px 12px; cursor: pointer; border: 1px solid #ccc; background: white; border-radius: 3px; }
+        .nav-btn { padding: 6px 12px; cursor: pointer; border: 1px solid #ccc; background: white; border-radius: 3px; font-weight: bold; color: var(--bosch-blue); }
     </style>
 </head>
-<body>
+<body onmousedown="if(window.opener && window.opener.resetInactivityTimer) window.opener.resetInactivityTimer()" onkeydown="if(window.opener && window.opener.resetInactivityTimer) window.opener.resetInactivityTimer()">
 <header>
     <div style="display:flex; align-items:center; gap:15px;">
         <div class="bosch-logo">BOSCH</div>
         <div style="font-weight:bold; color:#555;">Unotron Wartungsübersicht</div>
     </div>
-    <button class="nav-btn" onclick="location.href='index.html'">🏠 Dashboard</button>
+    <button class="nav-btn" onclick="window.close()">❌ Schließen</button>
 </header>
 <div class="main-container">
-    <div class="sidebar">
-        <div class="machine-list" id="machineList"></div>
-    </div>
-    <div class="content">
-        <canvas id="mainChart"></canvas>
-    </div>
+    <div class="sidebar" id="machineList"></div>
+    <div class="content"><canvas id="mainChart"></canvas></div>
 </div>
-
 <script>
     const firebaseConfig = { apiKey: "AIzaSyD6xGCtU-felOyO_BRsFnVlB4yhC46FgYg", databaseURL: "https://bosch-agie-wartung-default-rtdb.europe-west1.firebasedatabase.app" };
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database(), auth = firebase.auth();
-
     const UNO_STEPS = [{total:2000, pkg:"P1, P2"}, {total:4000, pkg:"P3"}, {total:10000, pkg:"P1"}, {total:14000, pkg:"P5"}, {total:18000, pkg:"P1, P2"}, {total:26000, pkg:"P1"}, {total:28000, pkg:"P6, P7"}, {total:30000, pkg:"P3"}, {total:34000, pkg:"P1, P2"}, {total:42000, pkg:"P1"}, {total:50000, pkg:"P1, P2"}, {total:56000, pkg:"P3"}, {total:58000, pkg:"P1"}, {total:66000, pkg:"P1, P2"}, {total:74000, pkg:"P1"}, {total:82000, pkg:"P1, P2"}, {total:90000, pkg:"P3"}, {total:98000, pkg:"P1"}, {total:104000, pkg:"WP RESET"}];
     let state = { cloudRawData: [], extraCycles: {} };
 
@@ -57,6 +50,8 @@
         state.extraCycles = val.extraCycles || {};
         updateUI();
     });
+
+    auth.onAuthStateChanged(user => { if(!user) window.close(); });
 
     function updateUI() {
         if (!state.cloudRawData.length) return;
@@ -73,8 +68,8 @@
         document.getElementById('machineList').innerHTML = data.map(d => `
             <div class="card" style="border-left-color:${d.color}">
                 <div style="display:flex; justify-content:space-between; font-weight:bold;"><span>U${d.id}</span><span style="color:${d.color}">${d.rest.toLocaleString()}</span></div>
-                <div style="font-size:0.8em; color:var(--bosch-red); font-weight:bold; margin:5px 0;">Paket: ${d.pkg}</div>
-                <div style="display:flex; align-items:center; gap:10px;">
+                <span style="font-size:0.8em; color:var(--bosch-red); font-weight:bold;">Paket: ${d.pkg}</span>
+                <div style="display:flex; align-items:center; gap:10px; margin-top:5px;">
                     <button class="nav-btn" onclick="changeCycle('${d.id}', -1)">-</button>
                     <b>${d.cIdx}</b>
                     <button class="nav-btn" onclick="changeCycle('${d.id}', 1)">+</button>
