--- a/agie.html
+++ b/agie.html
@@ -11,12 +11,12 @@
     <style>
         :root { --bosch-red: #d50000; --bosch-blue: #003a6c; --bosch-green: #008a4f; --bosch-gray: #eff1f2; }
         body { font-family: 'Segoe UI', sans-serif; background: var(--bosch-gray); margin: 0; padding: 0; display: flex; flex-direction: column; height: 100vh; overflow: hidden; }
-        header { background: white; padding: 10px 20px; display: flex; justify-content: space-between; align-items: center; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
+        header { background: white; padding: 10px 20px; display: flex; justify-content: space-between; align-items: center; box-shadow: 0 2px 5px rgba(0,0,0,0.1); z-index: 10; }
         .bosch-logo { color: var(--bosch-red); font-weight: 900; font-size: 24px; }
         .main-container { display: flex; flex: 1; overflow: hidden; }
-        .sidebar { width: 320px; background: white; border-right: 1px solid #ddd; overflow-y: auto; padding: 10px; }
-        .card { background: white; border: 1px solid #eee; border-left: 6px solid #ccc; margin-bottom: 10px; padding: 12px; border-radius: 4px; }
-        .content { flex: 1; padding: 20px; }
+        .sidebar { width: 320px; background: white; border-right: 1px solid #ddd; display: flex; flex-direction: column; overflow-y: auto; }
+        .card { background: white; border: 1px solid #eee; border-left: 6px solid #ccc; margin: 10px; padding: 12px; border-radius: 4px; }
+        .content { flex: 1; padding: 20px; position: relative; }
         .nav-btn { padding: 6px 12px; cursor: pointer; border: 1px solid #ccc; background: white; border-radius: 3px; font-weight: bold; color: var(--bosch-blue); }
     </style>
 </head>
@@ -51,21 +51,17 @@
     const AGIE_PKGS = ["P1/2", "P1/3", "P1/2", "P1/4", "P1/2/3", "P1/5", "P1/2", "P1/3", "P1/2", "P1/4", "P1/2/3", "P1/6/7", "P1/2"];
     let state = { cloudRawData: [], extraCycles: {}, agieOffsets: {} };
 
-    // Audit Log Funktion
+    // Zentrales Logging
     async function writeLog(action, machine, detail) {
         const user = auth.currentUser ? auth.currentUser.email : "Unbekannt";
         await db.ref('auditLog').push({ timestamp: new Date().toISOString(), user, action, machine, detail });
     }
 
-    // WICHTIG: Nur schließen wenn User ausgeloggt wird
+    // Wartet nur auf Signal vom Dashboard
     auth.onAuthStateChanged(user => {
-        if(!user) {
-            console.log("Logout erkannt - schließe Fenster.");
-            window.close();
-        }
+        if(!user) window.close();
     });
 
-    // Daten laden
     db.ref('maintenanceState').on('value', s => {
         const val = s.val() || {};
         state.cloudRawData = val.cloudRawData || [];
@@ -88,16 +84,16 @@
 
         document.getElementById('machineList').innerHTML = data.map(d => `
             <div class="card" style="border-left-color:${d.color}">
-                <div style="display:flex; justify-content:space-between; font-weight:bold;">
-                    <span>A${d.id}</span>
+                <div style="display:flex; justify-content:space-between; font-weight:bold; margin-bottom:5px;">
+                    <span>Maschine A${d.id}</span>
                     <span style="color:${d.color}">${d.rest.toLocaleString()}</span>
                 </div>
-                <span style="font-size:0.85em; color:var(--bosch-red); font-weight:bold; display:block; margin: 4px 0;">Paket: ${AGIE_PKGS[Math.min(d.cIdx, AGIE_PKGS.length-1)]}</span>
+                <span style="font-size:0.8em; color:var(--bosch-red); font-weight:bold; display:block; margin-bottom:8px;">Paket: ${AGIE_PKGS[Math.min(d.cIdx, AGIE_PKGS.length-1)]}</span>
                 <div style="display:flex; align-items:center; gap:10px;">
                     <button class="nav-btn" onclick="changeCycle('${d.id}', -1)">-</button>
-                    <b>${d.cIdx}</b>
+                    <b style="font-size:1.1em;">${d.cIdx}</b>
                     <button class="nav-btn" onclick="changeCycle('${d.id}', 1)">+</button>
-                    <button class="nav-btn" style="font-size:0.8em; margin-left:auto;" onclick="wpReset('${d.id}')">🔄 Reset</button>
+                    <button class="nav-btn" style="margin-left:auto; font-size:0.8em;" onclick="wpReset('${d.id}')">🔄 Reset</button>
                 </div>
             </div>`).join('');
         renderChart(data);
@@ -112,27 +108,35 @@
 
     async function wpReset(id) {
         const configSnap = await db.ref('config').once('value');
-        if(prompt("Admin Passwort für Full-Service-Reset (208k):") === configSnap.val()?.AdminPW) {
+        if(prompt("Admin Passwort:") === configSnap.val()?.AdminPW) {
             const newOffset = (state.agieOffsets[id] || 0) + 208000;
             await db.ref(`maintenanceState/agieOffsets/${id}`).set(newOffset);
             await db.ref(`maintenanceState/extraCycles/${id}`).set(0);
             writeLog("Full Reset", "A"+id, `Offset erhöht auf ${newOffset}`);
-            alert("Reset durchgeführt!");
-        } else { alert("Passwort falsch!"); }
+            alert("Reset erfolgt!");
+        }
     }
 
     function renderChart(data) {
         const ctx = document.getElementById('mainChart').getContext('2d');
         if(window.myChart) window.myChart.destroy();
         window.myChart = new Chart(ctx, {
-            type: 'bar', plugins: [ChartDataLabels],
-            data: { 
-                labels: data.map(d => "A"+d.id), 
-                datasets: [{ data: data.map(d => d.rest), backgroundColor: data.map(d => d.color) }] 
+            type: 'bar',
+            plugins: [ChartDataLabels],
+            data: {
+                labels: data.map(d => "A"+d.id),
+                datasets: [{
+                    data: data.map(d => d.rest),
+                    backgroundColor: data.map(d => d.color),
+                    borderRadius: 4
+                }]
             },
-            options: { 
-                responsive: true, maintainAspectRatio: false, 
-                plugins: { legend: {display:false}, datalabels: {anchor:'end', align:'top', formatter:v=>v.toLocaleString()} } 
+            options: {
+                responsive: true, maintainAspectRatio: false,
+                plugins: {
+                    legend: { display: false },
+                    datalabels: { anchor: 'end', align: 'top', formatter: (v) => v.toLocaleString() }
+                }
             }
         });
     }
