--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 
 <div class="dashboard-grid">
     <div class="column">
-        <div class="col-header"><a onclick="openManagedWindow('https://norman8410.github.io/agie-wartung/')">⚡ Agie ➔</a> <span id="count-agie">0</span></div>
+<div class="col-header"><a onclick="openManagedWindow('https://norman8410.github.io/Wartungsdashboard-W430/agie.html')">⚡ Agie ➔</a> <span id="count-agie">0</span></div>
+
         <div class="machine-list" id="list-agie"></div>
     </div>
     <div class="column" style="border-top-color: var(--bosch-green);">
